<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Video_infoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.youtube.player.YouTubePlayerView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/yvideo">
        </com.google.android.youtube.player.YouTubePlayerView>

        <TextView
            android:id="@+id/Video_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="10dp"
            android:hint="@string/video_name"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/source"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/source"
            android:textSize="15sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autoLink="web"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/Link"
            android:hint="@string/url_of_video"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/Desc"
            android:hint="@string/about_video"
            android:textSize="16sp"
            android:textStyle="bold"
            />
    </LinearLayout>

</ScrollView>